// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioSimpleGroup /> snapshot should match snapshot 1`] = `
<DocumentFragment>
  <div
    aria-describedby="radio-simple-group-description-1"
    aria-labelledby="test-ID"
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    id="1"
    role="radiogroup"
  >
    <span
      id="test-ID"
    >
      <div>
        Select your favorite color
      </div>
    </span>
    <span
      id="radio-simple-group-description-1"
    >
      <div>
        Only choose one
      </div>
    </span>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Red
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Blue
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Yellow
      </mdc-text>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with child thats selected 1`] = `
<DocumentFragment>
  <div
    aria-label="Some label"
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    id="1"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="true"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          checked=""
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Red
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Blue
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Yellow
      </mdc-text>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with children 1`] = `
<DocumentFragment>
  <div
    aria-label="Some label"
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    id="1"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Red
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Blue
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Yellow
      </mdc-text>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with children with group disabled 1`] = `
<DocumentFragment>
  <div
    aria-disabled="true"
    aria-label="Some label"
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="true"
    id="1"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          disabled=""
          name="test-ID"
          type="radio"
          value="red"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Red
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          disabled=""
          name="test-ID"
          type="radio"
          value="blue"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Blue
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          disabled=""
          name="test-ID"
          type="radio"
          value="yellow"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Yellow
      </mdc-text>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with children with read only 1`] = `
<DocumentFragment>
  <div
    aria-label="Some label"
    aria-orientation="vertical"
    aria-readonly="true"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    id="1"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          aria-readonly="true"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Red
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          aria-readonly="true"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Blue
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          aria-readonly="true"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Yellow
      </mdc-text>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with className 1`] = `
<DocumentFragment>
  <div
    aria-label="Some label"
    aria-orientation="vertical"
    class="example-className md-radio-simple-group-wrapper"
    data-disabled="false"
    id="1"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Red
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Blue
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Yellow
      </mdc-text>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with description 1`] = `
<DocumentFragment>
  <div
    aria-describedby="radio-simple-group-description-example-id"
    aria-label="Some label"
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    id="example-id"
    role="radiogroup"
  >
    <span
      id="radio-simple-group-description-example-id"
    >
      <div>
        Only choose one
      </div>
    </span>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Red
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Blue
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Yellow
      </mdc-text>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with id 1`] = `
<DocumentFragment>
  <div
    aria-label="Some label"
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    id="example-id"
    role="radiogroup"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Red
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Blue
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Yellow
      </mdc-text>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<RadioSimpleGroup /> snapshot should match snapshot with style 1`] = `
<DocumentFragment>
  <div
    aria-label="Some label"
    aria-orientation="vertical"
    class="md-radio-simple-group-wrapper"
    data-disabled="false"
    id="1"
    role="radiogroup"
    style="color: pink;"
  >
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="red"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Red
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="blue"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Blue
      </mdc-text>
    </label>
    <label
      class="md-radio-simple-wrapper"
      data-disabled="false"
      data-focused="false"
      data-selected="false"
    >
      <div
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          aria-label="Some label"
          name="test-ID"
          tabindex="0"
          type="radio"
          value="yellow"
        />
      </div>
      <mdc-text
        class="md-text-wrapper"
      >
        Yellow
      </mdc-text>
    </label>
  </div>
</DocumentFragment>
`;
